--- a/sound/songs/midi/midi.cfg
+++ b/sound/songs/midi/midi.cfg
@@ -209,12 +209,19 @@ mus_vs_trainer.mid:            -E -R50 -G119 -V080 -P1
 mus_vs_wild.mid:               -E -R50 -G117 -V080 -P1
 mus_weather_groudon.mid:       -E -R50 -G090 -V050
 mus_waterfall_colosseum.mid:   -E -R50 -G191 -V092 -P1
-mus_vs_cipher_admin.mid:       -E -R50 -G191 -V090 -P1
+mus_vs_cipher_admin.mid:       -E -R50 -G192 -V091 -P1
 mus_vs_champion_nemona.mid:    -E -R50 -G191 -V090 -P1
 mus_dusk_forest.mid:           -E -R50 -G191 -V084
 mus_aegis_cave.mid:            -E -R50 -G191 -V084
 mus_bw_vs_legendary.mid:       -E -R50 -G191 -V080 -P1
-mus_misa_theme.mid:            -E -R50 -G192 -V084 -P1
+mus_misa_theme.mid:            -E -R50 -G192 -V088 -P1
+mus_pyrite_theme.mid:          -E -R50 -G192 -V088 -P1
+mus_vs_ratduardo.mid:          -E -R50 -G192 -V091 -P1
+mus_bennis.mid:                -E -R50 -G192 -V090 -P1
+mus_bennis_dojo.mid:           -E -R50 -G192 -V088 -P1
+mus_final_battle.mid:          -E -R50 -G192 -V090 -P1
+mus_battle_three.mid:          -E -R50 -G192 -V090 -P1
+mus_pyrite_battle.mid:         -E -R50 -G192 -V090 -P1
 ph_choice_blend.mid:           -E -G130 -P4
 ph_choice_held.mid:            -E -G130 -P4
 ph_choice_solo.mid:            -E -G130 -P4
