--- a/sound/songs/midi/midi.cfg
+++ b/sound/songs/midi/midi.cfg
@@ -15,7 +15,7 @@ mus_b_tower_rs.mid:            -E -R50 -G035 -V080
 mus_b_tower.mid:               -E -R50 -G110 -V100
 mus_birch_lab.mid:             -E -R50 -G033 -V080
 mus_c_comm_center.mid:         -E -R50 -V080
-mus_c_vs_legend_beast.mid:     -E -R50 -V080
+mus_c_vs_legend_beast.mid:     -E -R50 -G194 -V080
 mus_cable_car.mid:             -E -R50 -G071 -V078
 mus_caught.mid:                -E -R50 -G025 -V080
 mus_cave_of_origin.mid:        -E -R50 -G037 -V080
