new songs and maps
old chateau
rowans lab
eterna forest
city two
ff theme
void
newmoon island
fullmoon island

--- a/sound/songs/midi/midi.cfg
+++ b/sound/songs/midi/midi.cfg
@@ -225,6 +225,12 @@ mus_pyrite_battle.mid:         -E -R50 -G192 -V090 -P1
 mus_snowfall.mid:              -E -R50 -G192 -V094 
 mus_hearthome_city_night.mid:  -E -R50 -G192 -V089 
 mus_eterna_city_night.mid:     -E -R50 -G192 -V089
+mus_old_chateau.mid:           -E -R50 -G192 -V089
+mus_rowans_lab.mid:            -E -R50 -G192 -V089
+mus_city_two.mid:              -E -R50 -G192 -V089
+mus_eterna_forest.mid:         -E -R50 -G192 -V089
+mus_ff_theme.mid:              -E -R50 -G192 -V089
+mus_void.mid:                  -E -R50 -G192 -V089
 ph_choice_blend.mid:           -E -G130 -P4
 ph_choice_held.mid:            -E -G130 -P4
 ph_choice_solo.mid:            -E -G130 -P4
