baldesion annex ost

--- a/sound/songs/midi/midi.cfg
+++ b/sound/songs/midi/midi.cfg
@@ -230,7 +230,8 @@ mus_rowans_lab.mid:            -E -R50 -G192 -V089
 mus_city_two.mid:              -E -R50 -G192 -V089
 mus_eterna_forest.mid:         -E -R50 -G192 -V089
 mus_ff_theme.mid:              -E -R50 -G192 -V089
-mus_void.mid:                  -E -R50 -G192 -V089
+mus_void.mid:                  -E -R50 -G192 -V092
+mus_baldesion_annex.mid:       -E -R50 -G192 -V095
 ph_choice_blend.mid:           -E -G130 -P4
 ph_choice_held.mid:            -E -G130 -P4
 ph_choice_solo.mid:            -E -G130 -P4
