--- a/sound/songs/midi/midi.cfg
+++ b/sound/songs/midi/midi.cfg
@@ -230,8 +230,10 @@ mus_rowans_lab.mid:            -E -R50 -G192 -V089
 mus_city_two.mid:              -E -R50 -G192 -V089
 mus_eterna_forest.mid:         -E -R50 -G192 -V089
 mus_ff_theme.mid:              -E -R50 -G192 -V089
-mus_void.mid:                  -E -R50 -G192 -V092
+mus_void.mid:                  -E -R50 -G192 -V093
 mus_baldesion_annex.mid:       -E -R50 -G192 -V095
+mus_exdeath.mid:               -E -R50 -G192 -V090 -P1
+mus_underwater_cave.mid:       -E -R50 -G192 -V080
 ph_choice_blend.mid:           -E -G130 -P4
 ph_choice_held.mid:            -E -G130 -P4
 ph_choice_solo.mid:            -E -G130 -P4
