hgss music and route 138

--- a/sound/songs/midi/midi.cfg
+++ b/sound/songs/midi/midi.cfg
@@ -234,6 +234,16 @@ mus_void.mid:                  -E -R50 -G192 -V093
 mus_baldesion_annex.mid:       -E -R50 -G192 -V095
 mus_exdeath.mid:               -E -R50 -G192 -V092 -P1
 mus_underwater_cave.mid:       -E -R50 -G192 -V080
+mus_tin_tower.mid:             -E -R50 -G192 -V080
+mus_sprout_tower.mid:          -E -R50 -G192 -V080
+mus_ecruteak_city.mid:         -E -R50 -G192 -V080
+mus_kimono_dance.mid:          -E -R50 -G192 -V080
+mus_encounter_kimono.mid:      -E -R50 -G192 -V080
+mus_gold_battle.mid:           -E -R50 -G192 -V080 -P1
+mus_victory_gold.mid:          -E -R50 -G192 -V080
+mus_encounter_gold.mid:        -E -R50 -G192 -V080
+mus_gold_27.mid:               -E -R50 -G192 -V080
+mus_gold_12.mid:               -E -R50 -G192 -V080
 ph_choice_blend.mid:           -E -G130 -P4
 ph_choice_held.mid:            -E -G130 -P4
 ph_choice_solo.mid:            -E -G130 -P4
