more music and area zero

--- a/sound/songs/midi/midi.cfg
+++ b/sound/songs/midi/midi.cfg
@@ -244,6 +244,9 @@ mus_victory_gold.mid:          -E -R50 -G192 -V080
 mus_encounter_gold.mid:        -E -R50 -G192 -V080
 mus_gold_27.mid:               -E -R50 -G192 -V080
 mus_gold_12.mid:               -E -R50 -G192 -V080
+mus_area_zero.mid:             -E -R50 -G192 -V080
+mus_area_zero_wild_battle.mid: -E -R50 -G192 -V080 -P1
+mus_legendary_quartet.mid:     -E -R50 -G192 -V080
 ph_choice_blend.mid:           -E -G130 -P4
 ph_choice_held.mid:            -E -G130 -P4
 ph_choice_solo.mid:            -E -G130 -P4
